
  common_wiki 295 tests passed, 5 tests failed

wiwordik 0.XX 2011-0?-??
   See wiwordik/release_notes.txt

  common_wiki_android_test Runs: 59 errors 0 failures 1

-Xms1212m -Xmx1212m -Xmn16m -XX:+DisableExplicitGC -verbose:gc
-Xms1212m -Xmx1212m -Xmn16m -XX:+DisableExplicitGC -verbose:gc -XX:PermSize=256m

Split to common_wiki and common_wiki_jdbc
  common_wiki 293 tests passed, 5 tests failed
  common_wiki_jdbc 88 tests passed, 10 tests failed
  common_wiki_jdbc 77 tests passed, 20 tests failed, 1 error (wo wikt_parsed)

  common_wiki 231 tests passed, 6 tests failed
  common_wiki_jdbc 88 tests passed, 10 tests failed

wikokit 0.12.6 2011-0?-??
  common_wiki 310 tests passed, 23 tests failed

  common_wiki 299 tests passed, 23 tests failed (part of wikt_parsed db)
  common_wiki 306 tests passed, 16 tests failed
  common_wiki 303 tests passed, 16 tests failed
  common_wiki 286 tests passed, 16 tests failed
  common_wiki 276 tests passed, 25 tests failed (wo wikt_parsed)
  
  common_wiki 280 tests passed, 16 tests failed
  common_wiki 261 tests passed, 27 tests failed (wo wikt_parsed)

  Project synarcher was renamed to wikokit.
  New home: code.google.com

  Subproject kleinberg was renamed to hits_wiki.
  The following subprojects were added: common_wiki, wikt_parser, and wiwordik.


Synarcher 0.12.5 2008-04-06
  241 tests passed, 6 tests failed
  This version is devoted to Index Wiki Database (WikIDF) creation.

  WikIDF is a console application (part of Synarcher program), which 
  depends on the RuPOSTagger program, see http://rupostagger.sourceforge.net

  The Wiki Index Database is a list of lemmas and links to wiki pages, 
  which contain these lemmas. The Wiki Index Database now could be 
  created with the help of new upper (or sub) project WikIDF, 
  see synarcher/wikidf/readme.txt

  The created index DB for Russian and Simple English Wikipedia 
  are available at: http://rupostagger.sourceforge.net, 
  see packages idfruwiki and idfsimplewiki.
