@@ -4,7 +4,7 @@ debug.test.modulepath=\
     ${run.test.modulepath}
 #Mon Feb 22 18:44:47 MSK 2016
 excludes=
-javac.deprecation=true
+javac.deprecation=false
 javac.external.vm=false
 javac.modulepath=
 javac.processormodulepath=
@@ -43,7 +43,7 @@ build.dir=build
 jar.index=${jnlp.enabled}
 build.test.classes.dir=${build.dir}/test/classes
 platform.active=default_platform
-javac.compilerargs=-Xlint:deprecation -Xlint:unchecked
+javac.compilerargs=\ -Xlint:unchecked
 jnlp.descriptor=application
 dist.jar=${dist.dir}/common_wiki.jar
 jnlp.codebase.url=file\:/D\:/all/projects/java/synonyms/wikokit/common_wiki/dist/
